cluster/apps/gitlab/gitlab/networkpolicies/envoy-gateway-egress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-gitlab
  namespace: network
spec:
  description: Allow all gateway egress traffic to gitlab
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app: gitlab-shell
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "2222"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8181" # http-workhorse
              protocol: TCP
