cluster/apps/gitlab/gitlab/networkpolicies/envoy-gateway-internal-egress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-internal-egress-gitlab
  namespace: network
spec:
  description: "Policy for envoy-gateway-internal-egress-gitlab"
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab-garage
            app.kubernetes.io/name: garage
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: registry
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
