cluster/apps/gitlab/gitlab/networkpolicies/gitlab-gitaly.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-gitaly
  namespace: gitlab
spec:
  description: "Policy for gitlab-gitaly"
  endpointSelector:
    matchLabels:
      app: gitaly
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: gitlab-shell
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
